# rabbitmq-cpp

./: .gitignore  Common.mk  README.md  bootstrap.sh  configure.in
examples/: .gitignore  Makefile.am  connect.cc  consumer.cc  exchange_declare.cc  producer.cc
src/: .gitignore  Makefile.am  async_connection.cc  async_connection.h  client.cc  client.h  connection.cc  connection.h  sync_connection.cc  sync_connection.h
